--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -60,19 +60,19 @@
                         <div class="col-lg-10 col-md-10 col-sm-10 col-lg-offset-1 col-md-offset-1 col-sm-offset-1">
                             {% if not deny_register %}
                                 <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
-                                    <button type="submite" class="btn btn-success btn-raised btn-block" form="form-login" style="position: initial;"> {% trans 'Log in' %} </button>
+                                    <button type="submit" class="btn btn-success btn-raised btn-block" form="form-login" style="position: initial;"> {% trans 'Log in' %} </button>
                                 </div>
                                 <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
                                     <a class="btn btn-default btn-raised btn-block" href="{% url 'users:signup' %}" formaction="#" style="position: initial;">{% trans 'Sign Up' %}</a>
                                 </div>
                             {% else %}
                                 <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 col-lg-offset-3 col-md-offset-3 col-sm-offset-3 col-xs-offset-3 text-center">
-                                    <button type="submite" class="btn btn-success btn-raised btn-block" form="form-login" style="position: initial;"> {% trans 'Log in' %} </button>
+                                    <button type="submit" class="btn btn-success btn-raised btn-block" form="form-login" style="position: initial;"> {% trans 'Log in' %} </button>
                                 </div>
                             {% endif %}
                         </div>
                     </div>
-                    <div class="row login_subcommands">
+                    <div class="row login_subcommands hidden-sm hidden-xs">
                         {% if not deny_register %}
                             <div class="col-sm-offset-1 col-md-10 col-lg-10 col-sm-10 col-xs-12">
                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-right forgotPassword">
@@ -133,6 +133,11 @@
                                 </div>
                             </div>
                         {% endif %}
+                    </div>
+                    <div class="row login_subcommands hidden-lg hidden-md">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center forgotPassword">
+                                    <a href="{% url 'users:forgot_pass' %}">{% trans 'Forgot your password?' %}</a>
+                        </div>
                     </div>
                 </div> 
             </div>
