Adjusting css for login and forget password amadeus logo size

--- a/amadeus/static/css/base/amadeus_responsive.css
+++ b/amadeus/static/css/base/amadeus_responsive.css
@@ -261,6 +261,12 @@
 	.outside-title{
 		font-size:1.5em;
 	}
+	.logo-register, .logo-login{
+		max-width: 100px;
+		height: auto;
+		text-align: center;
+		width: auto;
+	}
 }
 @media(max-width:610px){
 	.outside-title{
