Responsive login form space

--- a/amadeus/static/css/base/amadeus_responsive.css
+++ b/amadeus/static/css/base/amadeus_responsive.css
@@ -267,9 +267,18 @@
 		text-align: center;
 		width: auto;
 	}
+
+	.container-fluid {
+    	padding-left: 10px;
+    	padding-right: 10px;
+    }
 }
 @media(max-width:610px){
 	.outside-title{
 		font-size:1.5em;
 	}
+	
+	.container-fluid {
+    	padding-left: 10px;
+    	padding-right: 10px;
 }
