Including responsive style for toggle_slide buttons

--- a/amadeus/static/css/base/amadeus_responsive.css
+++ b/amadeus/static/css/base/amadeus_responsive.css
@@ -276,12 +276,15 @@
     p{
     	margin: 10px;
     }
+	.slide_toggle{
+		visibility: hidden;
+	}
 }
 @media(max-width:610px){
 	.outside-title{
 		font-size:1.5em;
 	}
-	
+
 	.container-fluid {
     	padding-left: 10px;
     	padding-right: 10px;
