--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -48,73 +48,74 @@
 					<form class="{% if form.has_error %} has-error {% endif %} form-horizontal is-fileinput" method="post" enctype="multipart/form-data" id="user-form">
 						{% csrf_token %}
 						{% for field in form %}
-							<div class="col-lg-12 col-md-12 col-sm-12">
-								<div class="form-group form-group-md">
-									<div class="col-md-12 col-sm-12 col-xs-12 col-lg-12">
-										{% if field.auto_id == 'id_image' %}
-											<label for="{{ field.auto_id }}">{{ field.label }}</label>
-											
+						{% if field.auto_id == 'id_show_email' %}
+						{% elif field.auto_id == 'id_x' %}
+								<input class="form-control" id="id_x" name="x" type="hidden">
+						{% elif field.auto_id == 'id_y' %}
+								<input class="form-control" id="id_y" name="y" type="hidden">
+					  {% elif field.auto_id == 'id_width' %}
+								<input class="form-control" id="id_width" name="width" type="hidden">
+						{% elif field.auto_id == 'id_height' %}
+								<input class="form-control" id="id_height" name="height" type="hidden">
+						{% else %}
+								<div class="col-lg-12 col-md-12 col-sm-12">
+									<div class="form-group form-group-md">
+										<div class="col-md-12 col-sm-12 col-xs-12 col-lg-12">
+											{% if field.auto_id == 'id_image' %}
+												<label for="{{ field.auto_id }}">{{ field.label }}</label>
 											{% render_field field class='form-control file-selector' %}
-											
-											<div class="input-group common-file-input">
-										      	<input type="text" readonly="" class="form-control" placeholder="{% trans 'Choose your photo...' %}">
-										      	<span class="input-group-btn input-group-sm">
-										        	<button type="button" class="btn btn-fab btn-fab-mini">
-										        		<i class="material-icons">attach_file</i>
-										       		</button>
-										      	</span>
-										    </div>
+												<div class="input-group common-file-input">
+											      	<input type="text" readonly="" class="form-control" placeholder="{% trans 'Choose your photo...' %}">
+											      	<span class="input-group-btn input-group-sm">
+											        	<button type="button" class="btn btn-fab btn-fab-mini">
+											        		<i class="material-icons">attach_file</i>
+											       		</button>
+											      	</span>
+											   </div>
+													    	<div class="filedrag">
+													    		{% if acc.image %}
+														    		<i class="fa fa-file-archive-o"></i> <br />
+														    		<small>{{ acc.image.path }}</small>
+														    	{% else %}
+														      		{% trans 'Click or drop the file here' %}<br />
+														      		<small>{% trans 'The photo could not exceed 2MB.' %}</small>
+														      {% endif %}
+												  			</div>
+								         {% else %}
+																{% render_field field class='form-control' %}
+											{% endif %}
 
-										    <div class="filedrag">
-										    	{% if acc.image %}
-										    		<i class="fa fa-file-archive-o"></i> <br />
-
-										    		<small>{{ acc.image.path }}</small>
-										    	{% else %}
-										      		{% trans 'Click or drop the file here' %}<br />
-										      		
-										      		<small>{% trans 'The photo could not exceed 2MB.' %}</small>
-										      	{% endif %}
-									  		</div>
-							            {% else %}
-							            	{% if field.auto_id == 'id_show_email' %}
-														{% else %}
-															{% render_field field class='form-control' %}
-							            	{% endif %}
-
-
+											<span class="help-block">{{ field.help_text }}</span>
+										</div>
+										{% if field.errors %}
+											<div class="row">
+												<div class="alert alert-danger alert-dismissible" role="alert">
+													<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+														<span aria-hidden="true">&times;</span>
+													</button>
+													<ul>
+														{% for error in field.errors %}
+														<li>{{ error }}</li>
+														{% endfor %}
+													</ul>
+												</div>
+											</div>
 										{% endif %}
-										<span class="help-block">{{ field.help_text }}</span>
-									</div>
-									
-									{% if field.errors %}
-										<div class="row">
-											<div class="alert alert-danger alert-dismissible" role="alert">
-												<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-													<span aria-hidden="true">&times;</span>
-												</button>
+
+										{% if field.auto_id == 'id_image' %}
+											<div class="col-lg-12 col-md-12 col-sm-12 alert alert-danger alert-dismissible client-file-errors" style="display:none" role="alert">
+													<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+														<span aria-hidden="true">&times;</span>
+													</button>
 												<ul>
-													{% for error in field.errors %}
-													<li>{{ error }}</li>
-													{% endfor %}
+													<li class="size" style="display:none">{% trans "The image is too large. It should have less than 2MB." %}</li>
+													<li class="format" style="display:none">{% trans 'File not supported.' %}</li>
 												</ul>
 											</div>
-										</div>
-									{% endif %}
-
-									{% if field.auto_id == 'id_image' %}
-										<div class="col-lg-12 col-md-12 col-sm-12 alert alert-danger alert-dismissible client-file-errors" style="display:none" role="alert">
-												<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-													<span aria-hidden="true">&times;</span>
-												</button>
-											<ul>
-												<li class="size" style="display:none">{% trans "The image is too large. It should have less than 2MB." %}</li>
-												<li class="format" style="display:none">{% trans 'File not supported.' %}</li>
-											</ul>
-										</div>
-									{% endif %}
+										{% endif %}
+									</div>
 								</div>
-							</div>
+								{% endif %}
 						{% endfor %}
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12">
@@ -146,7 +147,7 @@ function Init() {
 	var small = $(".file-selector"),
 		filedrag = $(".filedrag"),
 		common = $(".common-file-input");
-		
+
 	// file select
 	small.on("change", FileSelectHandler);
 
