Fix'd filter buttons for mural

--- a/amadeus/static/css/base/amadeus_responsive.css
+++ b/amadeus/static/css/base/amadeus_responsive.css
@@ -328,6 +328,9 @@
 	.help-block span{
     	position: relative !important;
     }
+		li[data-mural] {
+			font-size: 13px;
+		}
 
 }
 @media(max-width:610px){
