--- a/amadeus/static/css/base/amadeus_responsive.css
+++ b/amadeus/static/css/base/amadeus_responsive.css
@@ -331,6 +331,9 @@
 		li[data-mural] {
 			font-size: 13px;
 		}
+	.post-icon {
+		font-size: 32px !important;
+	}
 
 }
 @media(max-width:610px){
@@ -350,6 +353,9 @@
 		position: static;
 		text-align: center;
 		font-size: 1em;
+	}
+	.post-icon {
+		font-size: 32px !important;
 	}
 }
 
