--- a/amadeus/static/css/themes/contrast.css
+++ b/amadeus/static/css/themes/contrast.css
@@ -141,8 +141,16 @@ select option:hover {
 .form-group.is-focused .checkbox label:focus,
 .form-group.is-focused .checkbox label:hover,
 .form-group.is-focused label.checkbox-inline:focus,
-.form-group.is-focused label.checkbox-inline:hover {
+.form-group.is-focused label.checkbox-inline:hover,
+.form-group.is-focused .radio label:focus,
+.form-group.is-focused .radio label:hover,
+.form-group.is-focused label.radio-inline:focus,
+.form-group.is-focused label.radio-inline:hover {
   color: #FFFFFF; }
+
+.form-group.is-focused .radio label,
+.form-group.is-focused label.radio-inline {
+  color: #BDBDBD; }
 
 .checkbox .checkbox-material .check, label.checkbox-inline .checkbox-material .check {
   border: 2px solid #FFF333; }
@@ -155,6 +163,13 @@ label.checkbox-inline input[type=checkbox]:checked + .checkbox-material .check {
 .checkbox input[type=checkbox]:checked + .checkbox-material .check:before,
 label.checkbox-inline input[type=checkbox]:checked + .checkbox-material .check:before {
   color: #FFF333; }
+
+.radio .circle, label.radio-inline .circle {
+  border: 2px solid #FFFFFF; }
+
+.radio .check:after, label.radio-inline .check:after,
+.radio .check, label.radio-inline .check, label.radio-inline input[type=radio] .check {
+  background-color: #FFFFFF; }
 
 .radio input[type=radio]:checked ~ .check, label.radio-inline input[type=radio]:checked ~ .check {
   background-color: #FFF333; }
@@ -305,10 +320,6 @@ fieldset[disabled][disabled] .input-group-btn .btn {
   background: #FFF333 !important;
   color: #000000 !important; }
 
-.navbar-header{
-  background: #FFF333 !important;
-  color: #000000 !important; }
-}
 .navbar-nav li.settings_menu_active {
   background: #FFF333; }
 
@@ -415,6 +426,7 @@ fieldset[disabled][disabled] .input-group-btn .btn {
   background-color: #FFFFFF !important;
   color: #000000 !important; }
 
+.panel-invisible .category-header > h4.panel-title span,
 .panel-invisible .category-course-link {
   color: #000000 !important; }
 
