Cut card box shadow for responsive design

--- a/amadeus/static/css/base/amadeus_responsive.css
+++ b/amadeus/static/css/base/amadeus_responsive.css
@@ -164,6 +164,10 @@
 		margin-top: 8px;
 	}
 
+	.card{
+		box-shadow: 0 3px 3px 0 rgba(0,0,0,.2), 0 3px 3px 0 rgba(0,0,0,.19);
+	}
+
 	.users-cloud  .small a {
 
         display:none;
