Responsive search button

--- a/amadeus/static/css/base/amadeus_responsive.css
+++ b/amadeus/static/css/base/amadeus_responsive.css
@@ -206,6 +206,10 @@
     	background:#F5F5F5;
     	margin-bottom: -1px;
     }
+
+    .input-group .input-group-btn{
+    	padding: 0px;
+    }
 }
 
 @media(min-width: 768px) {
