Responsive search button color input

--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -233,7 +233,7 @@
                     <form id="SearchForm" action="{% url 'subjects:search' %}" method="get" accept-charset="utf-8">
                         <div class="input-group">
                             <div class="form-group is-empty" >
-                                <input type="text" class="form-control top-search" placeholder="{% trans 'Search for subjects and resources' %}" name="search">
+                                <input type="text" class="form-control top-search" placeholder="{% trans 'Search for subjects and resources' %}" name="search" style="color:#009C8A;">
                             </div>
                             <span class="input-group-btn input-group-sm">
                                 <button type="submit" class="btn btn-primary" id="btn-search">
