--- a/amadeus/static/css/themes/contrast.sass
+++ b/amadeus/static/css/themes/contrast.sass
@@ -357,6 +357,9 @@ fieldset[disabled][disabled] .input-group-btn .btn
 .top-search 
     color: $primary-white
 
+.navbar-header
+    background-color: $primary-color
+
 .navbar-brand
     color: $secondary-white !important
 
