--- a/amadeus/static/css/themes/green.sass
+++ b/amadeus/static/css/themes/green.sass
@@ -190,6 +190,9 @@ body .container-fluid .well-inverse
 .top-search 
     color: $primary-white
 
+.navbar-header
+    background-color: $primary-color
+
 .navbar-brand:hover 
     background: $secondary-color !important
 
