--- a/amadeus/static/css/themes/black.sass
+++ b/amadeus/static/css/themes/black.sass
@@ -235,6 +235,9 @@ body .container-fluid .well-inverse
 .top-search 
     color: $primary-white
 
+.navbar-header
+    background-color: $primary-color
+
 .navbar-brand:hover 
     background: $secondary-color !important
 
