Adjusting chat list responsivity

--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -1302,7 +1302,7 @@ div.dataTables_wrapper div.dataTables_paginate {
 .participant {
     margin-bottom: 10px;
     padding-right: 10px;
-    height: 70px;
+    min-height: 70px;
 }
 
 .participant .user-img {
