Adjusting chat participants list responsivity

--- a/amadeus/static/css/base/amadeus_responsive.css
+++ b/amadeus/static/css/base/amadeus_responsive.css
@@ -210,7 +210,7 @@
     	padding: 0px;
     }
 
-    .talks-group {
+    .talks-group, .participants-group {
     	margin-left: 0px;
     	margin-right: 0px;
     }
