--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -1297,6 +1297,7 @@ div.dataTables_wrapper div.dataTables_paginate {
 /* Chat */
 .participants-group, .talks-group {
     margin-left: 40px;
+    margin-right: 5px;
 }
 
 .participant {
