Adjusting chat modal responsivity

--- a/amadeus/static/css/base/amadeus_responsive.css
+++ b/amadeus/static/css/base/amadeus_responsive.css
@@ -214,6 +214,22 @@
     	margin-left: 0px;
     	margin-right: 0px;
     }
+
+    #chat-modal-info .modal-dialog {
+    	margin: 0;
+    }
+
+    #chat-modal-info[style] {
+	    padding-left: 0px !important;
+	}
+
+	.talk-filter .checkbox {
+		display: inline;
+	}
+
+	.talk-filter label {
+		font-size: 13.2px;
+	}
 }
 
 @media(min-width: 768px) {
