--- a/chat/templates/chat/talk.html
+++ b/chat/templates/chat/talk.html
@@ -33,8 +33,8 @@
 	                            <input name="mine" type="checkbox"> {% trans 'Only my messages' %}
 	                        </label>
 	                    </div>
-	                    <button type="submit" class="btn btn-success btn-sm btn-raised">{% trans 'Filter' %}</button>
-	                    <button type="button" id="clear_filter" class="btn btn-default btn-sm btn-raised clear_filter">{% trans 'Clean Filters' %}</button>
+	                    <button type="submit" class="hidden-sm hidden-xs btn btn-success btn-sm btn-raised">{% trans 'Filter' %}</button>
+	                    <button type="button" id="clear_filter" class="hidden-sm hidden-xs btn btn-default btn-sm btn-raised clear_filter">{% trans 'Clean Filters' %}</button>
 	                </form>
 	            </div>
 	        </div>
