Responsive align badge on rotate screen

--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -222,9 +222,9 @@
                     </a>
                 </div>
                 <div class="col-sm-4 col-xs-4">
-                    <button class="btn btn-primary navbar-toggle pull-right" id="btn-search" data-toggle="collapse" data-target=".search-responsive-collapse">
+                    <a class="btn btn-primary navbar-toggle pull-right" id="btn-search" data-toggle="collapse" data-target=".search-responsive-collapse">
                         <i class="fa fa-search" aria-hidden="true"></i>
-                    </button>
+                    </a>
                 </div>
             </div>
 
