--- a/amadeus/static/css/base/amadeus_responsive.css
+++ b/amadeus/static/css/base/amadeus_responsive.css
@@ -230,6 +230,12 @@
 	.talk-filter label {
 		font-size: 13.2px;
 	}
+
+	.category-course-link {
+	    font-size: 12px;
+	    font-family: Roboto;
+	    font-weight: normal;
+	}
 }
 
 @media(min-width: 768px) {
@@ -405,5 +411,10 @@
 @media(min-width: 500px) {
 	.dropdown-menu{
 		margin-left: 130px;
+	}
+
+	li.item .notify_badge {
+	    top: 0px;
+	    right: 30px;
 	}
 }
