Removing buttons from chat filter

--- a/chat/templates/chat/talk.html
+++ b/chat/templates/chat/talk.html
@@ -30,11 +30,9 @@
 	                    </div>
 	                    <div class="checkbox">
 	                        <label>
-	                            <input name="mine" type="checkbox"> {% trans 'Only my messages' %}
+	                            <input name="mine" type="checkbox"> {% trans 'My messages' %}
 	                        </label>
 	                    </div>
-	                    <button type="submit" class="hidden-sm hidden-xs btn btn-success btn-sm btn-raised">{% trans 'Filter' %}</button>
-	                    <button type="button" id="clear_filter" class="hidden-sm hidden-xs btn btn-default btn-sm btn-raised clear_filter">{% trans 'Clean Filters' %}</button>
 	                </form>
 	            </div>
 	        </div>
